<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:background="@drawable/button2rectangle">

    <Button
        android:id="@+id/matchid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/match_data"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button2rectangle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TableLayout
        android:id="@+id/matchtables"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:text="Team Name" />

            <TextView
                android:id="@+id/match_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="center"
                android:text="@string/team"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_gravity="center"
                android:text="Team Name" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/teamA_mdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/team_mdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="center"
                android:text="@string/match_date"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/teamB_mdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_gravity="center"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/teamA_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/mscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="center"
                android:text="@string/score"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/teamB_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_gravity="center"
                android:text="" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/teamA_wicketTaken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/wicketTaken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="center"
                android:text="@string/wicket_taken"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/teamB_wicketTaken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/teamA_total4s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/teamTotal4s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="center"
                android:text="@string/total_4s"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/teamB_total4s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_gravity="center"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/teamA_total6s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/team_total6s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="center"
                android:text="@string/total_6s"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/teamB_total6s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_gravity="center"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/teamA_tcatches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/team_tcatches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="center"
                android:text="@string/total_catches"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/teamB_tcatches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_gravity="center"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/teamA_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/team_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="center"
                android:text="@string/result"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/teamB_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_gravity="center"
                android:text="" />
        </TableRow>
    </TableLayout>


</LinearLayout>