<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdminStadium"
    android:orientation="vertical"
    android:isScrollContainer="true"
    android:background="@drawable/mainbackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/matchid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/match_data"
            android:background="@drawable/rectangle"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TableLayout
            android:id="@+id/matchtables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:background="#66141414" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/steam1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:inputType="text"
                    android:hint="Team Name" />

                <TextView
                    android:id="@+id/match_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:text="@string/team"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:id="@+id/steam2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:inputType="text"
                    android:hint="Team Name" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/steamA_mdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:inputType="date"
                    android:hint="T1 Date" />

                <TextView
                    android:id="@+id/team_mdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:text="@string/match_date"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:id="@+id/steamB_mdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:inputType="date"
                    android:hint="T2 Date" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/steamA_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:hint="T1 Score"
                    android:inputType="textPersonName"
                    />

                <TextView
                    android:id="@+id/mscore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:text="@string/score"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:id="@+id/steamB_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:hint="T2 Score"
                    android:inputType="textPersonName"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/steamA_wicketTaken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:hint="T1 WT"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/wicketTaken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:text="@string/wicket_taken"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:id="@+id/steamB_wicketTaken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:hint="T2 WT"
                    android:inputType="number"/>
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/steamA_total4s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:hint="T1 4s"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/teamTotal4s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:text="@string/total_4s"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:id="@+id/steamB_total4s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:hint="T2 6s"
                    android:inputType="number"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/steamA_total6s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:hint="T1 6s"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/team_total6s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:text="@string/total_6s"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:id="@+id/steamB_total6s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:hint="T2 6s"
                    android:inputType="number"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/steamA_tcatches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:hint="T1 Catches"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/team_tcatches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:text="@string/total_catches"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:id="@+id/steamB_tcatches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:hint="T2 Catches"
                    android:inputType="number"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/steamA_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:hint="T1 Result"
                    android:inputType="text"/>
                <TextView
                    android:id="@+id/team_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:text="@string/result"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:id="@+id/steamB_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:hint="T2 Result"
                    android:inputType="text"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add To Firebase"
            android:onClick="addStadiumData"
            />
    </LinearLayout>
</ScrollView>