<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Extra"
    android:id="@+id/activityextra"
    android:background="@drawable/stdbackground"
    android:orientation="vertical"
    app:fontFamily="@font/aldrich" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@drawable/button2rectangle"
        android:layout_gravity="center_horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/stadium_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="7dp"
            android:layout_marginTop="50dp"
            android:text="@string/stadium_information"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            app:fontFamily="@font/aldrich" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stadium_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="2dp"
            android:textAlignment="center">

            <TableRow>

                <TextView
                    android:id="@+id/venue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:text="@string/venue"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/pitchinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:text="@string/pitch_info"
                    android:textColor="@color/colorBlack" />

            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/svenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:text="venue" />

                <TextView
                    android:id="@+id/spitchinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:maxLines="3"
                    android:text="pitch info" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>